# SehatScan

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  PYTHON_312.md  README.md  SECURITY.md  WORKFLOW.md  app.py  install.bat  packages.txt  pyproject.toml  requirements.txt  run.bat  sample_data.json
src/: __init__.py
src/medical_ocr/: __init__.py  ocr_processor.py
src/specialist/: __init__.py  specialist_advisor.py
src/visualizer/: __init__.py  json_visualizer.py
