[project]
name = "sehatscan"
version = "0.1.0"
description = "AI-powered medical report analysis that makes your health data clear and accessible"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.39.0",
    "plotly>=5.24.1",
    "huggingface-hub>=0.34.0",
    "python-dotenv>=1.0.1",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "numpy>=1.25.0",
    "requests>=2.32.0",
    "google-generativeai>=0.8.0",
    "paddlepaddle>=3.2.0",
    "paddleocr>=3.2.0",
    "opencv-python>=4.11.0.86",
]

[project.optional-dependencies]
ocr = [
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "opencv-python>=4.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
