[project]
name = "sehatscan"
version = "0.1.0"
description = "AI-powered medical report analysis that makes your health data clear and accessible"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "plotly>=5.25.0",
    "huggingface-hub>=0.26.0",
    "python-dotenv>=1.0.1",
    "pillow>=10.4.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "requests>=2.32.0",
    "google-generativeai>=0.8.3",
    "paddlepaddle>=3.0.0b1",
    "paddleocr>=2.8.1",
    "opencv-python>=4.10.0.84",
]

[project.optional-dependencies]
ocr = [
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "opencv-python>=4.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "ruff>=0.6.0",
]
